--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 	background-color: #ffffff;
 	color: #444444;
 	height: 100%;
-	background-image: url("../img/zemi_bg.svg");
 	background-repeat: repeat;
 	background-size: 60px;
 	font-family: Garamond , "Times New Roman" , "游明朝" , "Yu Mincho" , "游明朝体" , "YuMincho" , "ヒラギノ明朝 Pro W3" , "Hiragino Mincho Pro" , "HiraMinProN-W3" , "HGS明朝E" , "ＭＳ Ｐ明朝" , "MS PMincho" , serif;
@@ -35,62 +34,23 @@ body {
 	object-fit: cover;
 	width: 100%;
 	height: 100vh;
-}
-
-.container {
-	display: grid;
-	margin-top: 72px;
-	grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
-}
-
-.container__item {
-	opacity: 0;
-	position: relative;
-	width: 100%;
-	height: 100%;
-	-webkit-transition: 0.8s;
-	transition: 0.8s;
-}
-
-.container__item::before {
-	content: "";
-	display: block;
-	width: 100%;
-	padding-top: 100%;
-}
-
-.container__item__img {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	width: 100%;
-	height: 100%;
-	-o-object-fit: cover;
-	object-fit: cover;
-	padding: 6px;
+	padding: 80px;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	-webkit-transform: rotateZ(1deg);
+	transform: rotateZ(1deg);
 }
 
-.container__item--h1 {
-	grid-row: 1 / 3;
-	grid-column: 3 / 4;
-}
-
-.container__item--h2 {
-	grid-row: 4 / 6;
-	grid-column: 1 / 2;
-}
-
-.container__item--rotate {
-	-webkit-transform: rotate(-2deg);
-	transform: rotate(-2deg);
-}
-
-.container__item--negativeM {
-	margin-left: 8%;
+.randomButton {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	-webkit-transform: translateY(0%) translateX(-50%) rotate(20deg);
+	transform: translateY(0%) translateX(-50%) rotate(20deg);
+	margin-bottom: 18px;
+	font-size: 1.6rem;
+	margin-left: -40%;
+	color: #444444;
 }
 
 .logoAnimation {
@@ -101,10 +61,6 @@ body {
 	height: 100%;
 	background-color: #ffffff;
 	z-index: 999;
-}
-
-.bars {
-	height: 100%;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -114,6 +70,30 @@ body {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-flow: column;
+	flex-flow: column;
+}
+
+.logoAnimation .title {
+	font-size: 3rem;
+	text-align: center;
+	font-weight: normal;
+	letter-spacing: 1.2;
+}
+
+.bars {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	height: 280px;
 }
 
 .bars .bar {
@@ -175,6 +155,7 @@ body {
 	text-align: center;
 	line-height: 1.2;
 	font-weight: normal;
+	letter-spacing: 1.2;
 }
 
 .about__content {
@@ -223,7 +204,6 @@ body {
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-color: #ffffff;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -238,9 +218,14 @@ body {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	width: 100%;
-	-webkit-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.05);
-	box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.05);
 	z-index: 99;
+	-webkit-transform: rotate(-10deg) translateY(200%) translateX(-4%);
+	transform: rotate(-10deg) translateY(200%) translateX(-4%);
+}
+
+.header__logoBox {
+	-webkit-transform: rotate(60deg);
+	transform: rotate(60deg);
 }
 
 .header__logo {
@@ -248,9 +233,11 @@ body {
 }
 
 .header__link {
+	display: block;
 	font-size: 1.8rem;
 	text-decoration: none;
 	color: #444444;
+	margin-bottom: 5px;
 }
 
 .main {
@@ -258,7 +245,10 @@ body {
 }
 
 .footer {
-	width: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -268,11 +258,19 @@ body {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	height: 40px;
+	padding-top: -5px;
+	padding-right: 16px;
+	width: 54px;
+	margin-top: 20%;
 }
 
 .footer .copy {
-	font-size: 1.4rem;
+	font-size: 1.2rem;
+	padding-left: 4px;
+	-webkit-writing-mode: vertical-rl;
+	-ms-writing-mode: tb-rl;
+	writing-mode: vertical-rl;
+	color: #999;
 }
 
 @media screen and (max-width: 480px) {
@@ -280,6 +278,16 @@ body {
 .wrapper {
 	width: 90%;
 	margin: 0 auto;
+}
+
+.mainVisual__img {
+	-o-object-fit: cover;
+	object-fit: cover;
+	width: 100%;
+	height: 100vh;
+	padding: 70px 34px 80px 34px;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .about {
@@ -320,21 +328,12 @@ body {
 	margin-top: -5px;
 }
 
-.container {
-	margin-top: 30px;
+.logoAnimation .title {
+	font-size: 2.6rem;
 }
 
 .bars {
-	height: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
+	height: 200px;
 }
 
 .bars .bar {
@@ -354,6 +353,16 @@ body {
 
 .header__link {
 	font-size: 1.6rem;
+}
+
+.footer {
+	padding-top: -5px;
+	padding-right: 5px;
+	width: 24px;
+}
+
+.footer .copy {
+	font-size: 1rem;
 }
 
 }
